[package]
name = "dnspeep"
version = "0.1.0"
authors = ["Julia Evans <julia@jvns.ca>"]
edition = "2018"

[dependencies]
pcap = { git = "https://github.com/jvns/pcap", features=["capture-stream"] }
libc = "0.2.80"
dns-message-parser = "0.4"
etherparse = "0.9.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
eyre = "0.6.5"
getopts = "0.2.17"
bytes = "~1.0"
